--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 This repository is part of the supplementary material for the paper:
-N. Tagasovska, T. Vatter, V. Chavez-Demoulin, "Nonparametric Quantile Causal Discovery”, 2018.
+N. Tagasovska, T. Vatter, V. Chavez-Demoulin, "Nonparametric Quantile-based Causal Discovery”, 2018.
 
 CONTENTS
 ———————————————————
