--- a/README
+++ b/README
@@ -8,7 +8,7 @@ qccd_code2018/
 |-R/ (all of our R code lives here)
 |---run_benchmarks/ (scripts for running qccd across different benchmarks)
 |-data/
-|—ANHNMN/ (simulated and real data pairs)
+|---ANHNMN/ (simulated and real data pairs)
 |-----AN-Gauss/
 |-----AN-s/
 |-----HN/
