--- a/README
+++ b/README
@@ -23,7 +23,7 @@ qccd_code2018/
 |---tuebingen_benchmark/ (Mooij 2016)
 
 
-The file ~R/cd_methods.R contains a wrapper around our causal discovery method.
+The file ~R/cd_utils.R contains a wrapper around our causal discovery method.
 
 EXAMPLES
 ———————————————————
