--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 This repository is part of the supplementary material for the paper:
 N. Tagasovska, T. Vatter, V. Chavez-Demoulin, "Nonparametric Quantile Causal Discovery”, 2018.
+Availabe on arXiv: https://arxiv.org/pdf/1801.10579.pdf.
 
 CONTENTS
 ———————————————————
