--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 This repository is part of the supplementary material for the paper:
-N. Tagasovska, T. Vatter, V. Chavez-Demoulin, "Nonparametric Quantile Causal Discovery”, 2018.
+N. Tagasovska, T. Vatter, V. Chavez-Demoulin, "Nonparametric Quantile-Based Causal Discovery”, 2018.
 Availabe on arXiv: https://arxiv.org/pdf/1801.10579.pdf.
 
 CONTENTS
@@ -40,7 +40,7 @@ install.packages(“tnagler”)
 install.packages(“igraph”)
 install.packages(“pcalg”)
 install.packages(“ggraph”)
-install.packages(“naglr”)
+
 COPYING
 ———————————————————
 See COPYING for license terms.
